# shotcut

./: .gitignore  CMakeLists.txt  config.in.h  shotcut-lnx.pri  shotcut-win.pri  shotcut.pro  sync.profile
CuteLogger/: CMakeLists.txt  CuteLogger.pro
CuteLogger/include/: CuteLogger_global.h
cmake/: FindMlt.cmake
mvcp/: CMakeLists.txt  mvcp.c  mvcp.pro  mvcp_notifier.c  mvcp_remote.c  mvcp_tokeniser.c
src/: CMakeLists.txt  CMakeLists_src.cmake  abstractproducerwidget.h  glwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mltcontroller.cpp  mltcontroller.h  mltxmlchecker.cpp  openotherdialog.cpp  player.cpp  sharedframe.h  src.pri  src.pro  transportcontrol.cpp  transportcontrol.h
src/commands/: timelinecommands.h  undohelper.h
src/docks/: encodedock.h  playlistdock.cpp  playlistdock.h
src/htmleditor/: htmleditor.cpp
src/jobs/: ffmpegjob.cpp
src/models/: attachedfiltersmodel.h  audiolevelstask.h  multitrackmodel.h  playlistmodel.h
src/mvcp/: qconsole.cpp
src/qmltypes/: qmlfilter.cpp  qmlfilter.h  qmlhtmleditor.cpp  qmlutilities.cpp  thumbnailprovider.h  timelineitems.cpp  timelineitems.h
src/widgets/: colorbarswidget.cpp  countproducerwidget.cpp  lumamixtransition.h  servicepresetwidget.h  timelinepropertieswidget.h  toneproducerwidget.cpp  trackpropertieswidget.cpp  trackpropertieswidget.h
src/widgets/scopes/: audioloudnessscopewidget.cpp  audioloudnessscopewidget.h  audiopeakmeterscopewidget.cpp  audiopeakmeterscopewidget.h  audiospectrumscopewidget.cpp  audiospectrumscopewidget.h
